<resources>
    <string name="app_name">HHXRF</string>
    <string name="edit_btn_text">Edit</string>
    <string name="cancel_edit_btn_text">Cancel Edit</string>
    <string name="home_window">MAIN</string>
    <string name="input_password_tip">Enter Password</string>
    <string name="input_password_tip_sub">XRF REQUIRES PASSWORD TO INDENTIFY USER</string>
    <string name="input_password_tip_sub_error">Password Wrong</string>
    <string name="home_start_test_tip">PULLING TRIGGER TO ANALYZE</string>
    <string name="home_start_test_tip_detail">Pull the trigger directly,or target the sample by camera before trigger</string>
    <string name="home_on_testing_tip">On Testing...</string>
    <string name="home_on_testing_waiting_time_tip">Waiting about %1$d  seconds</string>
    <string name="home_open_camera">CAMERA</string>
    <string name="camera_activity_title">CAMERA</string>
    <string name="home_last_report">LATEST RESULT</string>
    <string name="home_last_report_show_more">show all</string>
    <string name="home_last_report_show_less">show less</string>
    <string name="home_last_report_sameple_rename_faild_tip">Sample name unchanged,Database has the same name!</string>
    <string name="home_last_report_top_navigation_label">No Data</string>
    <string name="home_last_report_column_element">ELEMENT</string>
    <string name="home_last_report_column_percent_symble">%</string>
    <string name="home_last_report_column_range">RANGE</string>
    <string name="home_last_report_column_mean_value">AVE</string>
    <string name="home_last_report_print_report">PRINT</string>
    <string name="home_last_report_print_report_details">BLUETOOTH</string>
    <string name="home_last_report_share_report">SEND</string>
    <string name="home_last_report_share_report_details">WLAN</string>
    <string name="result_settings">RESULT SET</string>
    <string name="test_way">METHOD</string>
    <string name="edit_report">REPORT EDIT</string>
    <string name="test_time">Test time</string>
    <string name="unit">UNIT</string>
    <string name="element">ELEMENT</string>
    <string name="compound">COMPOUND</string>
    <string name="format">FORMAT</string>
    <string name="decimal_point">DECIMAL</string>
    <string name="test_way_fragment_title">Method Setting</string>
    <string name="test_way_fragment_metal">ALLOY</string>
    <string name="test_way_fragment_ground">SOIL</string>
    <string name="test_way_fragment_item_select_tip">(Selected Method)</string>
    <string name="edit_report_fragment_title">SELECT REPORT TEMPLATE</string>
    <string name="edit_report_fragment_template_one">TEMPLATE 1</string>
    <string name="edit_report_fragment_template_two">TEMPLATE 2</string>
    <string name="edit_report_fragment_template_three">TEMPLATE 3</string>
    <string name="edit_report_fragment_template_selected_tip">(Selected Template)</string>
    <string name="edit_report_activity_report_header">Company profile, test information</string>
    <string name="edit_report_activity_report_table">The report form</string>
    <string name="edit_report_activity_report_footer">The footer content</string>
    <string name="format_fragment_title">SELECT RESULT FORMAT</string>
    <string name="format_fragment_format_one">AVE+GRADE</string>
    <string name="format_fragment_format_two">CONCENTRATION+GRADE</string>
    <string name="format_fragment_format_three">CONCENTRATION</string>
    <string name="format_fragment_format_selected_tip">(Selected Result format)</string>
    <string name="format_fragment_number_pick_title">Select AVE quantity</string>
    <string name="format_fragment_number_pick_title_tip">(0-99)</string>
    <string name="element_fragment_title">ADD PRESENT ELEMENTS</string>
    <string name="element_fragment_item_add">Add Elements</string>
    <string name="element_fragment_edit_btn_text">Edit</string>
    <string name="element_fragment_cancel_edit_btn_text">Cancel Edit</string>
    <string name="element_add_activity_search_box_hint">SEARCH ELEMENT or ELEMENT NUMBER</string>
    <string name="element_add_activity_multi_choice_btn_text">MULTI</string>
    <string name="element_add_activity_cancel_multi_choice_btn_text">Cancel Multi Choice</string>
    <string name="compound_fragment_title">COMPOUND PRESENT</string>
    <string name="unit_fragment_title">SELECT UNIT</string>
    <string name="unit_fragment_sel_label">(Selected Unit)</string>
    <string name="decimal_point_fragment_title">SELECT DECIMAL POINT</string>
    <string name="decimal_point_fragment_sel_label">(Selected Decimal)</string>
    <string name="test_time_fragment_title">SET MEASURING DURATION</string>
    <string name="test_time_fragment_label">MEASURING DURATION</string>
    <string name="test_time_fragment_label_tip">(1~1000s)</string>
    <string name="test_time_fragment_label_empty_tip">Can not empty!</string>
    <string name="test_time_fragment_label_tip_error">input error,please input the number between 1 to 1000</string>
    <string name="operate_settings">OPERATING SET</string>
    <string name="history_db">SAVED RESULTS</string>
    <string name="calibration">CALIBRATION</string>
    <string name="mark_db">GRADE LIBRARY</string>
    <string name="history_fragment_title">SELECT SAVED RESULT</string>
    <string name="history_fragment_edit_btn_text">Edit</string>
    <string name="history_fragment_cancel_edit_btn_text">Cancel Edit</string>
    <string name="history_fragment_data_compare">COMPARISON</string>
    <string name="history_fragment_column_name">NAME</string>
    <string name="history_fragment_column_datetime">DATE &#038; TIME</string>
    <string name="history_fragment_column_way">METHOD</string>
    <string name="compare_data_activity_search_box_hint">Enter sample name, each are separated by comma</string>
    <string name="compare_data_activity_data_compare">COMPARE RESULTS</string>
    <string name="compare_data_result_activity_element">Element</string>
    <string name="compare_data_result_activity_sample_one">Sample One</string>
    <string name="compare_data_result_activity_sample_two">Sample Two</string>
    <string name="calibration_fragment_title">CALIBRATION METHOD</string>
    <string name="calibration_fragment_power_calibration">ENERGY CALIBRATION</string>
    <string name="energy_calibration_start_tip">Pull the trigger to start alignment</string>
    <string name="energy_calibration_start_tip_detail">Just pull the trigger</string>
    <string name="on_energy_calibration_tip">On Energy Calibration...</string>
    <string name="on_energy_calibration_waiting_time_tip">Waiting about 60 seconds</string>
    <string name="on_energy_calibration_waiting_time_finish_tip">Finish</string>
    <string name="energy_calibration_result_title">Result page</string>
    <string name="calibration_fragment_type_calibration">TYPE CALIBRATION</string>
    <string name="calibration_fragment_add_new_type">Add new type</string>
    <string name="calibration_fragment_add_input_name_please">Please Input Name</string>
    <string name="calibration_fragment_add_item_same_tip">The calibration type with the same name already exists in the database. Please change the name of the calibration type!</string>
    <string name="calibration_fragment_add_item_empty_tip">Calibration type name cannot be empty!</string>
    <string name="calibration_fragment_add_input_name">Input Name</string>
    <string name="calibration_fragment_add_next_step">Next Step</string>
    <string name="calibration_fragment_add_sp_two_element">Element</string>
    <string name="calibration_fragment_add_sp_two_multiplication">Multiplication Coefficient</string>
    <string name="calibration_fragment_add_sp_two_plus">Plus Coefficient</string>
    <string name="calibration_fragment_add_sp_two_unit">Unit</string>
    <string name="calibration_fragment_add_sp_two_sure">Sure</string>
    <string name="mark_db_fragment_title">EDIT GRADE LIBRARY</string>
    <string name="mark_db_fragment_add_db">ADD LIBRARY</string>
    <string name="mark_db_fragment_import_mark_db">IMPORT LIBRARY</string>
    <string name="mark_db_fragment_edit_mark_db">EDIT LIBRARY</string>
    <string name="mark_db_fragment_float_menu_select">Select</string>
    <string name="mark_db_fragment_float_menu_cancel">Cancel</string>
    <string name="mark_db_fragment_float_menu_copy">Copy</string>
    <string name="mark_db_fragment_float_menu_del">Del</string>
    <string name="mark_db_fragment_float_menu_transport">Transport</string>
    <string name="mark_activity_import_mark">Import Mark</string>
    <string name="mark_activity_edit_mark">Edit Mark</string>
    <string name="mark_activity_add_new_mark">Add New Mark</string>
    <string name="mark_element_activity_title">Add New Element</string>
    <string name="mark_element_activity_dialog_hint">Please input the element name</string>
    <string name="mark_element_activity_import_element">Import Element</string>
    <string name="mark_element_activity_edit_element">Edit Element</string>
    <string name="mark_element_activity_element_label">Element</string>
    <string name="mark_element_activity_element_value_min_label">Min</string>
    <string name="mark_element_activity_element_value_max_label">Max</string>
    <string name="mark_element_activity_element_value_tol_label">Tol(%)</string>
    <string name="dialog_title_tip_text">Tip</string>
    <string name="dialog_positive_btn_text">Sure</string>
    <string name="dialog_positive_save_btn_text">Save</string>
    <string name="dialog_negative_btn_text">Cancel</string>
    <string name="device_settings">INSTRUMENT SET</string>
    <string name="link">Link</string>
    <string name="link_fragment_title">Link Setting</string>
    <string name="language">LANGUAGE</string>
    <string name="language_fragment_title">Language Setting</string>
    <string name="language_fragment_chinese">中文</string>
    <string name="language_fragment_english">English</string>
    <string name="language_fragment_selected_tip">(Selected Language)</string>
    <string name="pull_time">TRIGGER MODE</string>
    <string name="pull_time_fragment_title">Pull trigger time</string>
    <string name="pull_time_fragment_short_pull">SHORT PRESS</string>
    <string name="pull_time_fragment_lang_pull">LONG PRESS</string>
    <string name="pull_time_fragment_selected_tip">(Selected)</string>
    <string name="safe">SAFETY</string>
    <string name="safe_fragment_title">RESET PASSWORD</string>
    <string name="safe_fragment_input_current_password_tip">Please enter the current password</string>
    <string name="safe_fragment_input_new_password_tip">Please input new password</string>
    <string name="safe_fragment_input_new_password_repeat_tip">Please input new password again</string>
    <string name="safe_fragment_input_current_password_error_tip">Password error,please input repeat</string>
    <string name="safe_fragment_input_new_password_repeat_error_tip">The password input second is not same as the first,please input repeat</string>
    <string name="safe_fragment_input_new_password_success_tip">Password reset success!</string>
    <string name="about">INSTRUCTION</string>
    <string name="about_fragment_title">About Us</string>
    <string name="about_fragment_instruction_download_title">DOWNLOAD INSTRUCTIONS</string>
    <string name="about_fragment_instruction_download_sub_title">XX System version V1.0</string>
    <string name="about_fragment_instruction_mail_title">contact@gmail.com</string>
    <string name="about_fragment_instruction_mail_sub_title">EMAIL</string>
    <string name="about_fragment_instruction_tel_title">139-0293-2001</string>
    <string name="about_fragment_instruction_tel_sub_title">TEL.</string>
    <string name="about_fragment_instruction_title">森沙仪器</string>
    <string name="about_fragment_instruction_sub_title">Scensor Instruments</string>
</resources>