<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/activity_bg">

    <TextView
        android:id="@+id/left_Drawer_Company_Name_Label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="80dp"
        android:text="@string/about_fragment_instruction_title"
        android:textColor="@color/left_drawer_text"
        android:textSize="22sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/left_Drawer_Company_Name_English_Label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="0dp"
        android:text="@string/about_fragment_instruction_sub_title"
        android:textColor="@color/left_drawer_text"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/left_Drawer_Company_Name_Label" />

    <TextView
        android:id="@+id/left_Drawer_Version_Label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="0dp"
        android:paddingBottom="15dp"
        android:text="@string/about_fragment_instruction_download_sub_title"
        android:textColor="@color/left_drawer_text"
        android:textSize="12sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/left_Drawer_Company_Name_English_Label" />

</android.support.constraint.ConstraintLayout>