<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/calibration_Fragment_Title"
        android:text="@string/calibration_fragment_title"
        android:textSize="18sp"
        android:textColor="@color/result_text_black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="21dp"
        android:layout_marginLeft="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>
    <Button
        android:id="@+id/calibration_Fragment_Power_Calibration_Btn"
        android:text="@string/calibration_fragment_power_calibration"
        android:textColor="@color/test_time_text_blue"
        android:textSize="18sp"
        android:background="@drawable/round_rectangle_bg_light"
        android:layout_width="match_parent"
        android:layout_height="73.5dp"
        android:layout_marginTop="52dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintTop_toBottomOf="@id/calibration_Fragment_Title"/>
    <Button
        android:id="@+id/calibration_Fragment_Type_Calibration_Btn"
        android:text="@string/calibration_fragment_type_calibration"
        android:textColor="@color/test_time_text_blue"
        android:textSize="18sp"
        android:background="@drawable/round_rectangle_bg_light"
        android:layout_width="match_parent"
        android:layout_height="73.5dp"
        android:layout_marginTop="9dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintTop_toBottomOf="@id/calibration_Fragment_Power_Calibration_Btn"/>

</android.support.constraint.ConstraintLayout>