<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/history_Fragment_Title"
        android:text="@string/history_fragment_title"
        android:textSize="18sp"
        android:textColor="@color/result_text_black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="21dp"
        android:layout_marginLeft="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>
    <TextView
        android:id="@+id/history_Fragment_Edit_Btn"
        android:text="@string/history_fragment_edit_btn_text"
        android:textSize="15sp"
        android:textColor="@color/element_show_text_blue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginRight="16dp"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>
    <Button
        android:id="@+id/history_Fragment_Compare_Data_Btn"
        android:text="@string/history_fragment_data_compare"
        android:textSize="13sp"
        android:textColor="#FFFFFF"
        android:background="@drawable/round_rectangle_bg_green"
        android:layout_width="wrap_content"
        android:layout_height="22dp"
        android:layout_marginTop="22dp"
        android:layout_marginRight="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/history_Fragment_Sample_RV_Title_Layout"
        android:background="#FFFFFF"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@id/history_Fragment_Title">
        <View
            android:id="@+id/history_Fragment_Item_Divider_Line_Zero"
            android:background="#DDDDDD"
            android:layout_width="match_parent"
            android:layout_height="1px"
            app:layout_constraintTop_toTopOf="parent"/>
        <TextView
            android:id="@+id/history_Fragment_Sample_Name"
            android:text="@string/history_fragment_column_name"
            android:textSize="17sp"
            android:textColor="@color/home_text_black"
            android:gravity="center_horizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="9dp"
            app:layout_constraintTop_toBottomOf="@id/history_Fragment_Item_Divider_Line_Zero"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/history_Fragment_Datetime_Label"/>
        <TextView
            android:id="@+id/history_Fragment_Datetime_Label"
            android:text="@string/history_fragment_column_datetime"
            android:textSize="17sp"
            android:textColor="@color/home_text_black"
            android:gravity="center_horizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="9dp"
            app:layout_constraintTop_toBottomOf="@id/history_Fragment_Item_Divider_Line_Zero"
            app:layout_constraintLeft_toRightOf="@id/history_Fragment_Sample_Name"
            app:layout_constraintRight_toLeftOf="@+id/history_Fragment_Test_Way_Label"/>
        <TextView
            android:id="@+id/history_Fragment_Test_Way_Label"
            android:text="@string/history_fragment_column_way"
            android:textSize="17sp"
            android:textColor="@color/home_text_black"
            android:gravity="center_horizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="9dp"
            app:layout_constraintTop_toBottomOf="@id/history_Fragment_Item_Divider_Line_Zero"
            app:layout_constraintLeft_toRightOf="@id/history_Fragment_Datetime_Label"
            app:layout_constraintRight_toRightOf="parent"/>
        <View
            android:id="@+id/history_Fragment_Item_Divider_Line_One"
            android:background="#DDDDDD"
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginTop="5dp"
            app:layout_constraintTop_toBottomOf="@id/history_Fragment_Sample_Name"/>
    </android.support.constraint.ConstraintLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/history_Fragment_Sample_RV"
        android:overScrollMode="never"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/history_Fragment_Sample_RV_Title_Layout"
        app:layout_constraintBottom_toBottomOf="parent"/>
    <ImageView
        android:id="@+id/history_Fragment_Item_Del_Btn"
        android:src="@drawable/element_del_icon"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="22dp"
        android:layout_marginBottom="6dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</android.support.constraint.ConstraintLayout>