<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/app_bottom_navigation_bg"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:elevation="15dp">

    <View
        android:id="@+id/bottom_Navigation_Top_Line"
        android:background="@color/app_bottom_navigation_bg"
        android:layout_width="0dp"
        android:layout_height="1px"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>
    <TextView
        android:id="@+id/bottom_Navigation_Home_Btn"
        android:text="@string/home_window"
        android:textColor="#FFFFFF"
        android:drawableTop="@drawable/navigation_home_icon"
        android:background="@drawable/navigation_icon_back"
        android:layout_marginTop="5dp"
        android:gravity="center_horizontal"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/bottom_Navigation_Top_Line"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/bottom_Navigation_Result_Btn"/>
    <TextView
        android:id="@+id/bottom_Navigation_Result_Btn"
        android:text="@string/result_settings"
        android:textColor="#FFFFFF"
        android:alpha="0.5"
        android:drawableTop="@drawable/navigation_result_setting_icon"
        android:layout_marginTop="5dp"
        android:gravity="center_horizontal"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/bottom_Navigation_Top_Line"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/bottom_Navigation_Home_Btn"
        app:layout_constraintRight_toLeftOf="@+id/bottom_Navigation_Settings_Btn"/>
    <TextView
        android:id="@+id/bottom_Navigation_Settings_Btn"
        android:text="@string/operate_settings"
        android:textColor="#FFFFFF"
        android:alpha="0.5"
        android:drawableTop="@drawable/navigation_result_operate_setting_icon"
        android:layout_marginTop="5dp"
        android:gravity="center_horizontal"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/bottom_Navigation_Top_Line"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/bottom_Navigation_Result_Btn"
        app:layout_constraintRight_toLeftOf="@+id/bottom_Navigation_Device_Setting_Btn"/>
    <TextView
        android:id="@+id/bottom_Navigation_Device_Setting_Btn"
        android:text="@string/device_settings"
        android:textColor="#FFFFFF"
        android:alpha="0.5"
        android:drawableTop="@drawable/navigation_device_setting_icon"
        android:layout_marginTop="5dp"
        android:gravity="center_horizontal"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/bottom_Navigation_Top_Line"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/bottom_Navigation_Settings_Btn"
        app:layout_constraintRight_toRightOf="parent"/>


</android.support.constraint.ConstraintLayout>