<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/test_Time_Fragment_Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="21dp"
        android:text="@string/test_time_fragment_title"
        android:textColor="@color/result_text_black"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/test_Time_Fragment_Label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:text="@string/test_time_fragment_label"
        android:textColor="@color/test_time_text_dark"
        android:textSize="14sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/test_Time_Fragment_Title" />
    <TextView
        android:id="@+id/test_Time_Fragment_Label_Tip"
        android:text="@string/test_time_fragment_label_tip"
        android:textSize="12sp"
        android:textColor="@color/test_time_text_light"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/test_Time_Fragment_Label"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>
    <EditText
        android:id="@+id/test_Time_Fragment_Time_Edit"
        android:text="1"
        android:textSize="20sp"
        android:textColor="@color/test_time_text_blue"
        android:inputType="number"
        android:imeOptions="actionDone"
        android:gravity="center"
        android:background="@drawable/round_rectangle_bg_light"
        android:layout_width="165dp"
        android:layout_height="49dp"
        android:layout_marginTop="1dp"
        app:layout_constraintTop_toBottomOf="@id/test_Time_Fragment_Label_Tip"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

</android.support.constraint.ConstraintLayout>