<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#00FFFFFF"
    android:layout_width="match_parent"
    android:layout_height="66dp">
    <TextView
        android:id="@+id/compare_Result_Item_Element_Name"
        android:text="@string/home_last_report_column_element"
        android:textSize="15sp"
        android:textColor="@color/history_item_text_dark"
        android:gravity="center_horizontal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/compare_Result_Item_Sample_One_Element_Content"/>
    <TextView
        android:id="@+id/compare_Result_Item_Sample_One_Element_Content"
        android:text="@string/home_last_report_column_percent_symble"
        android:textSize="15sp"
        android:textColor="@color/history_item_text_dark"
        android:gravity="center_horizontal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/compare_Result_Item_Element_Name"
        app:layout_constraintRight_toLeftOf="@+id/compare_Result_Item_Sample_Two_Element_Content"/>
    <TextView
        android:id="@+id/compare_Result_Item_Sample_Two_Element_Content"
        android:text="@string/home_last_report_column_range"
        android:textSize="15sp"
        android:textColor="@color/history_item_text_dark"
        android:gravity="center_horizontal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/compare_Result_Item_Sample_One_Element_Content"
        app:layout_constraintRight_toRightOf="parent"/>

</android.support.constraint.ConstraintLayout>