<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#00FFFFFF"
    android:layout_width="match_parent"
    android:layout_height="66dp">
    <ImageView
        android:id="@+id/history_Item_Select_Icon"
        android:src="@drawable/check_box_unsel_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>
    <TextView
        android:id="@+id/history_Item_Sample_Name"
        android:text="@string/home_last_report_column_element"
        android:textSize="15sp"
        android:textColor="@color/history_item_text_dark"
        android:gravity="center_horizontal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/history_Item_Datetime_Label"/>
    <TextView
        android:id="@+id/history_Item_Datetime_Label"
        android:text="@string/home_last_report_column_percent_symble"
        android:textSize="15sp"
        android:textColor="@color/history_item_text_dark"
        android:gravity="center_horizontal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/history_Item_Sample_Name"
        app:layout_constraintRight_toLeftOf="@+id/history_Item_Test_Way_Label"/>
    <TextView
        android:id="@+id/history_Item_Test_Way_Label"
        android:text="@string/home_last_report_column_range"
        android:textSize="15sp"
        android:textColor="@color/history_item_text_dark"
        android:gravity="center_horizontal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/history_Item_Datetime_Label"
        app:layout_constraintRight_toRightOf="parent"/>

</android.support.constraint.ConstraintLayout>